Created notebooks folder and split analysis and cleaning seperately, completed needed analysis

--- a/data/bk_page_source.html
+++ b/data/bk_page_source.html
@@ -111,7 +111,7 @@
     </div>
     <div id="colsWrap">
      <div id="tableWrap">
-      <div class="calcTip arrowE inmTip inmTip1" id="inmTip1" style="position: absolute; left: 233.625px; display: block; opacity: 0.0453819;">
+      <div class="calcTip arrowE inmTip inmTip1" id="inmTip1" style="position: absolute; left: 233.625px; display: block; opacity: 0.733965;">
        <div class="tipText">
         <div class="close-tooltip">
          <a href="">
